remove concept of 'orch' from manifests (#1021)
* remove concept of orch from helm

--- a/_includes/master/charts/calico/base_values.yaml
+++ b/_includes/master/charts/calico/base_values.yaml
@@ -63,6 +63,7 @@ apiserver:
   tls:
     crt: null
     key: null
+  runAsPrivileged: false
   env:
     # Optional environment variables for configuring the Calico API Server.
     # - name: DATASTORE_TYPE
@@ -80,7 +81,6 @@ queryserver:
     #       optional: true
 
 # TODO: move to helpers
-orch: ""
 rbac: ""
 platform: ""
 
