--- a/master/getting-started/openshift/cnx-api.yaml
+++ b/master/getting-started/openshift/cnx-api.yaml
@@ -3,5 +3,6 @@ layout: null
 ---
 {% helm --execute templates/cnx-api.yaml %}
 datastore: etcd
-orch: openshift
+apiserver:
+  runAsPrivileged: true
 {% endhelm %}
