--- a/master/getting-started/openshift/cnx.yaml
+++ b/master/getting-started/openshift/cnx.yaml
@@ -2,5 +2,7 @@
 layout: null
 ---
 {% helm tigera-secure-lma --execute templates/manager.yaml %}
-orch: openshift
+manager:
+  auth:
+    type: OAuth
 {% endhelm %}
