--- a/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
@@ -235,7 +235,7 @@ spec:
       serviceAccount: elasticsearch-operator
 {{- end }}
 
-{{- if eq .Values.orch "openshift" }}
+{{- if .Values.prometheus.createFinalizers }}
 
 # This manifest includes some additional resources required to
 # deploy Prometheus Operator with Openshift.
@@ -269,26 +269,4 @@ subjects:
   name: calico-prometheus-operator
   namespace: calico-monitoring
 
-# This manifest adds an additional security context for
-# OpenShift so fluentd can ingest logs from the host.
----
-
-kind: SecurityContextConstraints
-apiVersion: v1
-metadata:
-  name: calico-fluentd-hostpath
-allowPrivilegedContainer: true
-allowHostDirVolumePlugin: true
-runAsUser:
-  type: RunAsAny
-seLinuxContext:
-  type: MustRunAs
-fsGroup:
-  type: RunAsAny
-supplementalGroups:
-  type: RunAsAny
-users:
-- system:serviceaccount:calico-monitoring:tigera-fluentd
-groups:
-- system:authenticated
 {{- end }}
