--- a/_includes/master/manifests/cnx-api.yaml
+++ b/_includes/master/manifests/cnx-api.yaml
@@ -361,7 +361,7 @@ spec:
             scheme: HTTPS
           initialDelaySeconds: 90
           periodSeconds: 10
-{{- if eq .Values.orch "openshift" }}
+{{- if .Values.apiserver.runAsPrivileged }}
         securityContext:
           privileged: true
 {{- end }}
