--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -20,96 +20,16 @@ spec:
   includeEndpointData: true
   uiSummaryTemplate:
     name: ui-summary.json
-    template: |
-      {
-        uiSummary: {
-          type: "panel",
-          heading: 'Inscope vs Protected',
-          widgets: [
-            {
-              type: "radialbarchart",
-              heading: 'Endpoints',
-              summary: {
-                label: 'Total',
-                total: {{ .EndpointsSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected ingress',
-                  value: {{ .EndpointsSummary.NumIngressProtected }}
-                }
-              ]
-            },
-            {
-              type: "radialbarchart",
-              heading: 'Namespaces',
-              summary: {
-                label: 'Total',
-                total: {{ .NamespacesSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected ingress',
-                  value: {{ .NamespacesSummary.NumIngressProtected }}
-                }
-              ]
-            },
-            {
-              type: "radialbarchart",
-              heading: 'Service Accounts',
-              summary: {
-                label: 'Total',
-                total: {{ .ServicesSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected ingress',
-                  value: {{ .ServicesSummary.NumIngressProtected }}
-                }
-              ]
-            },
-            {
-              type: "radialbarchart",
-              heading: 'Endpoints',
-              summary: {
-                label: 'Total',
-                total: {{ .EndpointsSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected egress',
-                  value: {{ .EndpointsSummary.NumEgressProtected }}
-                }
-              ]
-            },
-            {
-              type: "radialbarchart",
-              heading: 'Namespaces',
-              summary: {
-                label: 'Total',
-                total: {{ .NamespacesSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected egress',
-                  value: {{ .NamespacesSummary.NumEgressProtected }}
-                }
-              ]
-            },
-            {
-              type: "radialbarchart",
-              heading: 'Service Accounts',
-              summary: {
-                label: 'Total',
-                total: {{ .ServicesSummary.NumTotal }}
-              },
-              data: [
-                {
-                  label: 'Protected egress',
-                  value: {{ .ServicesSummary.NumEgressProtected }}
-                }
-              ]
-            }
-          ]
-        }
-      }
+    template: '{"uiSummary":{"heading":"Inscope vs Protected","type":"panel","widgets":[{"data":[{"label":"Protected
+      ingress","value":{{ .EndpointsSummary.NumIngressProtected }}}],"heading":"Endpoints","summary":{"label":"Total","total":{{
+      .EndpointsSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
+      ingress","value":{{ .NamespacesSummary.NumIngressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
+      .NamespacesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
+      ingress","value":{{ .ServicesSummary.NumIngressProtected }}}],"heading":"Service
+      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
+      egress","value":{{ .EndpointsSummary.NumEgressProtected }}}],"heading":"Endpoints","summary":{"label":"Total","total":{{
+      .EndpointsSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
+      egress","value":{{ .NamespacesSummary.NumEgressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
+      .NamespacesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
+      egress","value":{{ .ServicesSummary.NumEgressProtected }}}],"heading":"Service
+      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"}]}}'
