--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-snapshotter.yaml
@@ -101,6 +101,11 @@ spec:
               value: ""
             - name: ELASTIC_SCHEME
               value: ""
+            - name: ELASTIC_INDEX_SUFFIX
+              valueFrom:
+                configMapKeyRef:
+                  name: tigera-es-config
+                  key: tigera.elasticsearch.cluster-name
 {{- if eq $elasticMode "external" }}
             - name: ELASTIC_HOST
               valueFrom:
