--- a/_data/master/navbars/reference.yml
+++ b/_data/master/navbars/reference.yml
@@ -136,8 +136,10 @@ toc:
   section:
     - title: Configuring user authentication
       path: /reference/cnx/authentication
-    - title: Configuring Tigera Secure EE RBAC
+    - title: Configuring Tigera Secure EE RBAC for Tiered Policies
       path: /reference/cnx/rbac-tiered-policies
+    - title: Configuring Tigera Secure EE RBAC for Elasticsearch
+      path: /reference/cnx/rbac-elasticsearch
     - title: Editing policies
       path: /reference/cnx/policy-editor
     - title: Deploying Tigera Secure EE Manager
