--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -10,17 +10,17 @@ spec:
   - name: summary.csv
     template: |
       startTime,endTime,endpointSelector,namespaceNames,namespaceSelector,serviceAccountNames,serviceAccountSelectors,endpointsNumInScope,endpointsNumIngressProtected,endpointsNumEgressProtected,endpointsNumIngressFromInternet,endpointsNumEgressToInternet,endpointsNumIngressFromOtherNamespace,endpointsNumEgressToOtherNamespace,endpointsNumEnvoyEnabled
-      {{ .StartTime }},{{ .EndTime }},{{ .ReportSpec.EndpointsSelection.EndpointSelector }},{{ if .ReportSpec.EndpointsSelection.Namespaces }}{{ join .ReportSpec.EndpointsSelection.Namespaces.Names ";" }},{{ .ReportSpec.EndpointsSelection.Namespaces.Selector }}{{ else }},{{ end }},{{ join .ReportSpec.EndpointsSelection.ServiceAccounts.Names ";" }},{{ .ReportSpec.EndpointsSelection.ServiceAccounts.Selector }},{{ .EndpointsSummary.NumTotal }},{{ .EndpointsSummary.NumIngressProtected }},{{.EndpointsSummary.NumEgressProtected }},{{ .EndpointsSummary.NumIngressFromInternet }},{{ .EndpointsSummary.NumEgressToInternet }},{{ .EndpointsSummary.NumIngressFromOtherNamespace }},{{ .EndpointsSummary.NumEgressToOtherNamespace }},{{ .EndpointsSummary.NumEnvoyEnabled }}
+      {{ .StartTime }},{{ .EndTime }},{{ .ReportSpec.EndpointsSelection.EndpointSelector }},{{ if .ReportSpec.EndpointsSelection.Namespaces }}{{ join .ReportSpec.EndpointsSelection.Namespaces.Names ";" }},{{ .ReportSpec.EndpointsSelection.Namespaces.Selector }}{{ else }},{{ end }},{{ if .ReportSpec.EndpointsSelection.ServiceAccounts }}{{ join .ReportSpec.EndpointsSelection.ServiceAccounts.Names ";" }},{{ .ReportSpec.EndpointsSelection.ServiceAccounts.Selector }}{{ else }},{{ end }},{{ .EndpointsSummary.NumTotal }},{{ .EndpointsSummary.NumIngressProtected }},{{.EndpointsSummary.NumEgressProtected }},{{ .EndpointsSummary.NumIngressFromInternet }},{{ .EndpointsSummary.NumEgressToInternet }},{{ .EndpointsSummary.NumIngressFromOtherNamespace }},{{ .EndpointsSummary.NumEgressToOtherNamespace }},{{ .EndpointsSummary.NumEnvoyEnabled }}
   - name: endpoints.csv
     template: |
       endpoint,ingressProtected,egressProtected,envoyEnabled,appliedPolicies,services
       {{ range .Endpoints -}}
-      {{ .Endpoint }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies “;” }},{{ join .Services “;” }}
+      {{ .Endpoint }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies ";" }},{{ join .Services ";" }}
       {{- end }}
   includeEndpointData: true
   uiSummaryTemplate:
     name: ui-summary.json
-    template: '{"uiSummary":{"heading":"Inscope vs Protected","type":"panel","widgets":[{"data":[{"label":"Protected
+    template: '{"heading":"Inscope vs Protected","type":"panel","widgets":[{"data":[{"label":"Protected
       ingress","value":{{ .EndpointsSummary.NumIngressProtected }}}],"heading":"Endpoints","summary":{"label":"Total","total":{{
       .EndpointsSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
       ingress","value":{{ .NamespacesSummary.NumIngressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
@@ -32,4 +32,4 @@ spec:
       egress","value":{{ .NamespacesSummary.NumEgressProtected }}}],"heading":"Namespaces","summary":{"label":"Total","total":{{
       .NamespacesSummary.NumTotal }}},"type":"radialbarchart"},{"data":[{"label":"Protected
       egress","value":{{ .ServicesSummary.NumEgressProtected }}}],"heading":"Service
-      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"}]}}'
+      Accounts","summary":{"label":"Total","total":{{ .ServicesSummary.NumTotal }}},"type":"radialbarchart"}]}'
