Added missing section

--- a/_data/master/navbars/security.yml
+++ b/_data/master/navbars/security.yml
@@ -99,6 +99,7 @@ toc:
 - title: Intrusion detection and prevention
   section:
   - title: Anomaly detection
+  section
     - title: Overview
       path: /security/intrusion-detection/
     - title: Enabling intrusion detection
