--- a/_data/master/navbars/security.yml
+++ b/_data/master/navbars/security.yml
@@ -99,7 +99,7 @@ toc:
 - title: Intrusion detection and prevention
   section:
   - title: Anomaly detection
-  section
+    section:
     - title: Overview
       path: /security/intrusion-detection/
     - title: Enabling intrusion detection
