--- a/_includes/master/manifests/calico-kube-controllers.yaml
+++ b/_includes/master/manifests/calico-kube-controllers.yaml
@@ -42,6 +42,7 @@ spec:
       containers:
         - name: calico-kube-controllers
           image: {{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
+{{ tuple .Values.kubeControllers.resources | include "calico.resourceLimits" | indent 10 -}}
           env:
             # The location of the etcd cluster.
             - name: ETCD_ENDPOINTS
@@ -134,6 +135,7 @@ spec:
       containers:
         - name: calico-kube-controllers
           image: {{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
+{{ tuple .Values.kubeControllers.resources | include "calico.resourceLimits" | indent 10 -}}
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
