--- a/_includes/master/manifests/calico-node.yaml
+++ b/_includes/master/manifests/calico-node.yaml
@@ -163,6 +163,7 @@ spec:
         # host.
         - name: calico-node
           image: {{.Values.node.image}}:{{.Values.node.tag}}
+{{ tuple .Values.node.resources | include "calico.resourceLimits" | indent 10 -}}
           env:
 {{- if eq .Values.datastore "etcd" }}
             # The location of the etcd cluster.
@@ -346,9 +347,6 @@ spec:
 {{- end }}
           securityContext:
             privileged: true
-          resources:
-            requests:
-              cpu: 250m
           livenessProbe:
             httpGet:
               path: /liveness
@@ -415,6 +413,7 @@ spec:
         # for allocating subnets.
         - name: kube-flannel
           image: {{ .Values.flannel.image }}:{{ .Values.flannel.tag }}
+{{ tuple .Values.flannel.resources | include "calico.resourceLimits" | indent 10 -}}
           command: [ "/opt/bin/flanneld", "--ip-masq", "--kube-subnet-mgr" ]
           securityContext:
             privileged: true
@@ -451,6 +450,7 @@ spec:
         # container hosts.
         - name: flannel
           image: {{ .Values.flannel.image }}:{{ .Values.flannel.tag }}
+{{ tuple .Values.flannel.resources | include "calico.resourceLimits" | indent 10 -}}
           env:
             # The location of the etcd cluster.
             - name: FLANNELD_ETCD_ENDPOINTS
