--- a/_includes/master/manifests/cloud-controllers.yaml
+++ b/_includes/master/manifests/cloud-controllers.yaml
@@ -90,6 +90,7 @@ spec:
       containers:
         - name: tigera-cloud-controllers
           image: {{.Values.cloudControllers.image}}:{{.Values.cloudControllers.tag}}
+{{ tuple .Values.cloudControllers.resources | include "calico.resourceLimits" | indent 10 -}}
           readinessProbe:
             exec:
               command:
