--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-server.yaml
@@ -104,9 +104,7 @@ spec:
       containers:
         - name: compliance-server
           image: {{.Values.complianceServer.image}}:{{.Values.complianceServer.tag}}
-{{- if include "tigera-secure-lma.resourceLimitsConfigured" (tuple .Values.complianceServer.resources) }}
-{{ tuple .Values.complianceServer.resources | include "tigera-secure-lma.resourceLimits" | indent 10 }}
-{{- end }}
+{{ tuple .Values.complianceServer.resources | include "tigera-secure-lma.resourceLimits" | indent 10 -}}
           env:
             - name: LOG_LEVEL
               value: "warning"
