Add newline char between endpoint lines

--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -16,7 +16,7 @@ spec:
       endpoint,ingressProtected,egressProtected,envoyEnabled,appliedPolicies,services
       {{ range .Endpoints -}}
       {{ .Endpoint }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies ";" }},{{ join .Services ";" }}
-      {{- end }}
+      {{ end }}
   includeEndpointData: true
   uiSummaryTemplate:
     name: ui-summary.json
