CNX-6502: increasing volume sizes, memory and adding backups (#1013)
* CNX-6502: increasing volume sizes, memory and adding backups

* fixed the changes in master

* minor fix

* changed the flow retention back to 8 in v2.3

* changes in quickstart requirement to increase host RAM based on increase in elastic storage capacity

* updated the disk size in the quickstart doc

--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -370,8 +370,8 @@ spec:
   zones: []
   use-ssl: false
   # For production volumes, consider increasing volume sizes, memory and adding backups
-  data-volume-size: 5Gi
-  java-options: "-Xms256m -Xmx256m"
+  data-volume-size: 40Gi
+  java-options: "-Xms1g -Xmx1g"
   storage:
     storage-class: elasticsearch-storage
 ---
