--- a/report-types/default/networkaccess.yaml
+++ b/report-types/default/networkaccess.yaml
@@ -1,9 +1,9 @@
 apiVersion: projectcalico.org/v3
 kind: GlobalReportType
 metadata:
-  name: inventory
+  name: networkaccess
   labels:
-    global-report-type: inventory
+    global-report-type: networkaccess
 spec:
   uiSummaryTemplate:
     name: ui-summary.json
@@ -11,5 +11,3 @@ spec:
   downloadTemplates:
     - name: summary.csv
     - name: endpoints.csv
-    - name: namespaces.csv
-    - name: services.csv
