--- a/_includes/master/charts/tigera-secure-lma/base_values.yaml
+++ b/_includes/master/charts/tigera-secure-lma/base_values.yaml
@@ -147,13 +147,13 @@ complianceController:
       cpu: #"500m"
       memory: #"1024Mi" 
 
-# Configuration for the compliance server.
-complianceServer:
+# Configuration for the compliance reporter.
+complianceReporter:
   env:
-    # Optional environment variables for configuring the compliance server.
+    # Optional environment variables for configuring the compliance controller.
     # - name: LOG_LEVEL
     #   value: "warning"
-  # Optional configuration for setting resource limits on the compliance server container.
+  # Optional configuration for setting resource limits on the compliance controller container.
   resources:
     requests:
       cpu: #"100m"
@@ -169,6 +169,21 @@ complianceSnapshotter:
     # - name: LOG_LEVEL
     #   value: "warning"
   # Optional configuration for setting resource limits on the compliance snapshotter container.
+  resources:
+    requests:
+      cpu: #"100m"
+      memory: #"128Mi"
+    limits:
+      cpu: #"500m"
+      memory: #"1024Mi"
+
+# Configuration for the compliance server.
+complianceServer:
+  env:
+    # Optional environment variables for configuring the compliance server.
+    # - name: LOG_LEVEL
+    #   value: "warning"
+  # Optional configuration for setting resource limits on the compliance server container.
   resources:
     requests:
       cpu: #"100m"
@@ -236,9 +251,22 @@ elasticsearch:
     username: tigera-ee-curator
     password: ""
   compliance:
-    # Username and password for the compliance dashboard to authenticate with elasticsearch.
-    username: tigera-ee-compliance
-    password: ""
+    controller:
+      # Username and password for the compliance controller to authenticate with elasticsearch.
+      username: tigera-ee-compliance-controller
+      password: ""
+    reporter:
+      # Username and password for the compliance reporter to authenticate with elasticsearch.
+      username: tigera-ee-compliance-reporter
+      password: ""
+    snapshotter:
+      # Username and password for the compliance snpashotter to authenticate with elasticsearch.
+      username: tigera-ee-compliance-snapshotter
+      password: ""
+    server:
+      # Username and password for the compliance server to authenticate with elasticsearch.
+      username: tigera-ee-compliance-server
+      password: ""
   intrusionDetection:
     # Username and password for the intrusion detection controller to authenticate with elasticsearch.
     username: tigera-ee-intrusion-detection
