--- a/_includes/master/charts/tigera-secure-lma/templates/es-config-secret.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/es-config-secret.yaml
@@ -36,11 +36,29 @@ metadata:
   name: elastic-compliance-user
   namespace: calico-monitoring
 data:
-{{- if .Values.elasticsearch.compliance.username }}
-  username: {{ b64enc .Values.elasticsearch.compliance.username }}
+{{- if .Values.elasticsearch.compliance.controller.username }}
+  controller.username: {{ b64enc .Values.elasticsearch.compliance.controller.username }}
 {{- end }}
-{{- if .Values.elasticsearch.compliance.password }}
-  password: {{ b64enc .Values.elasticsearch.compliance.password }}
+{{- if .Values.elasticsearch.compliance.controller.password }}
+  controller.password: {{ b64enc .Values.elasticsearch.compliance.controller.password }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.reporter.username }}
+  reporter.username: {{ b64enc .Values.elasticsearch.compliance.reporter.username }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.reporter.password }}
+  reporter.password: {{ b64enc .Values.elasticsearch.compliance.reporter.password }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.snapshotter.username }}
+  snapshotter.username: {{ b64enc .Values.elasticsearch.compliance.snapshotter.username }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.snapshotter.password }}
+  snapshotter.password: {{ b64enc .Values.elasticsearch.compliance.snapshotter.password }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.server.username }}
+  server.username: {{ b64enc .Values.elasticsearch.compliance.server.username }}
+{{- end }}
+{{- if .Values.elasticsearch.compliance.server.password }}
+  server.password: {{ b64enc .Values.elasticsearch.compliance.server.password }}
 {{- end }}
 
 ---
