--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -945,9 +945,11 @@ master:
       version: master
     flannel:
       version: v0.9.1
-    compliance-server:
-      version: master
     compliance-controller:
       version: master
+    compliance-reporter:
+      version: master
     compliance-snapshotter:
+      version: master
+    compliance-server:
       version: master
