--- a/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/compliance/compliance-controller.yaml
@@ -1,4 +1,3 @@
-{{- $elasticMode := include "tigera-secure-lma.elasticsearch.mode" . }}
 kind: ServiceAccount
 apiVersion: v1
 metadata:
@@ -7,44 +6,68 @@ metadata:
 
 ---
 
-
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   namespace: calico-monitoring
-  name: compliance-controller-role
+  name: tigera-compliance-controller
 rules:
-  - apiGroups: ["batch"]
-    resources: ["jobs"]
-    verbs: ["create", "get", "deletecollection", "delete"]
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["list", "get", "watch"]
-  - apiGroups: ["projectcalico.org"]
-    resources:
-      - globalreporttypes
-      - globalreports
-    verbs:
-      - get
-      - list
-      - watch
+- apiGroups: ["batch"]
+  resources: ["jobs"]
+  verbs: ["create", "list", "get", "delete"]
+- apiGroups: [""]
+  resources: ["podtemplates"]
+  verbs: ["get"]
 
+---
+
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  name: tigera-compliance-controller
+rules:
+- apiGroups: ["projectcalico.org"]
+  resources:
+    - globalreports
+  verbs:
+    - list
+- apiGroups: ["projectcalico.org"]
+  resources:
+    - globalreports/status
+  verbs:
+    - update
+    - list
 
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
-  name: compliance-controller-binding
+  name: tigera-compliance-controller
+  namespace: calico-monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: compliance-controller-role
+  kind: Role
+  name: tigera-compliance-controller
 subjects:
 - kind: ServiceAccount
   name: tigera-compliance-controller
   namespace: calico-monitoring
 
+---
+
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: tigera-compliance-controller
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tigera-compliance-controller
+subjects:
+- kind: ServiceAccount
+  name: tigera-compliance-controller
+  namespace: calico-monitoring
 
 ---
 
@@ -88,10 +111,10 @@ spec:
               value: "info"
             - name: TIGERA_COMPLIANCE_REPORT_AFTER
               value: "30m"
-            - name: TIGERA_COMPLIANCE_JOB_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+{{- if eq .Values.platform "gke" }}
+            - name: HEALTH_PORT
+              value: "9199"
+{{- end }}
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
                 configMapKeyRef:
@@ -140,6 +163,15 @@ spec:
           volumeMounts:
             - name: elastic-ca-cert-volume
               mountPath: /etc/ssl/elastic/
+          #livenessProbe:
+          #  httpGet:
+          #    path: /liveness
+{{- if eq .Values.platform "gke" }}
+          #    port: 9199
+{{- else }}
+          #    port: 9099
+{{- end }}
+          #    host: localhost
       volumes:
         - name: elastic-ca-cert-volume
           secret:
