--- a/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/monitor-calico.yaml
@@ -27,10 +27,16 @@ data:
   # The retention period for audit logs, in days.  Logs written on a day that started at least this long ago are
   # removed.  To keep logs for at least x days, use a retention period of x+1.
   tigera.elasticsearch.audit-retention: "367"
-  # The retention period for snapshots, in days.  Logs written on a day that started at least this long ago are
+  # The retention period for snapshots, in days. Snapshots are periodic captures
+  # of resources which along with audit events are used to generate reports.
+  # Consult the Compliance Reporting documentation for more details on snapshots.
+  # Logs written on a day that started at least this long ago are
   # removed.  To keep logs for at least x days, use a retention period of x+1.
   tigera.elasticsearch.snapshot-retention: "367"
-  # The retention period for compliance reports, in days.  Logs written on a day that started at least this long ago are
+  # The retention period for compliance reports, in days. Reports are output
+  # from the analysis of the system state and audit events for compliance reporting.
+  # Consult the Compliance Reporting documentation for more details on reports.
+  # Logs written on a day that started at least this long ago are
   # removed.  To keep logs for at least x days, use a retention period of x+1.
   tigera.elasticsearch.compliance-report-retention: "367"
   # Whether to include the custom flow filters defined below in the fluentd config
