--- a/mockdata/scaleloader/playbooks/demo-other-playbook/scaled/c/02-modify.yaml
+++ b/mockdata/scaleloader/playbooks/demo-other-playbook/scaled/c/02-modify.yaml
@@ -5,6 +5,8 @@ metadata:
   name: demo-gns
   labels:
     gnslabela: "{{.Namespace}} doesn't make sense but just testing"
+    "templatedNS{{.Namespace}}": "Templated label? {{.Namespace}}"
+    "gnslabelb": "just another label"
 spec:
   nets:
     - "192.168.1.1/31"
