--- a/glide.yaml
+++ b/glide.yaml
@@ -20,7 +20,7 @@ import:
   - daemon
 - package: github.com/projectcalico/cni-plugin
   repo: git@github.com:tigera/cni-plugin-private.git
-  version: 
+  version: f6bafa4007c7b0b9298248a9b37976906ff1a67a
 - package: github.com/projectcalico/libcalico-go
   repo: git@github.com:tigera/libcalico-go-private.git
   version: ff37804b6fc54ad39a0c27807b52b85eb749a583
